add env var loading for goal creation switch

--- a/deployment_config/dev_vars.yml
+++ b/deployment_config/dev_vars.yml
@@ -48,6 +48,8 @@ ITAMS_MD_HOST: "${ITAMS_MD_HOST}"
 ITAMS_MD_PORT: "${ITAMS_MD_PORT}"
 ITAMS_MD_USERNAME: "${ITAMS_MD_USERNAME}"
 ITAMS_MD_PASSWORD: "${ITAMS_MD_PASSWORD}"
+ENABLE_MONITORING_GOAL_CREATION: "${DEV_GOAL_CREATION}"
+
 SMARTSHEET_ACCESS_TOKEN: "${SMARTSHEET_ACCESS_TOKEN}"
 
 REACT_APP_GTM_ENABLED: "${DEV_GTM_ENABLED}"
