--- a/deployment_config/prod_vars.yml
+++ b/deployment_config/prod_vars.yml
@@ -48,6 +48,7 @@ ITAMS_MD_PORT: "${ITAMS_MD_PORT}"
 ITAMS_MD_USERNAME: "${ITAMS_MD_USERNAME}"
 ITAMS_MD_PASSWORD: "${ITAMS_MD_PASSWORD}"
 SMARTSHEET_ACCESS_TOKEN: "${SMARTSHEET_ACCESS_TOKEN}"
+ENABLE_MONITORING_GOAL_CREATION: "${PROD_GOAL_CREATION}"
 
 new_relic_app_id: "877570491"
 new_relic_license: ${NEW_RELIC_LICENSE_KEY}
