--- a/deployment_config/staging_vars.yml
+++ b/deployment_config/staging_vars.yml
@@ -47,6 +47,7 @@ ITAMS_MD_PORT: "${ITAMS_MD_PORT}"
 ITAMS_MD_USERNAME: "${ITAMS_MD_USERNAME}"
 ITAMS_MD_PASSWORD: "${ITAMS_MD_PASSWORD}"
 SMARTSHEET_ACCESS_TOKEN: "${SMARTSHEET_ACCESS_TOKEN}"
+ENABLE_MONITORING_GOAL_CREATION: "${STAGING_GOAL_CREATION}"
 
 new_relic_app_id: "868729138"
 new_relic_license: ${NEW_RELIC_LICENSE_KEY}
