--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -145,41 +145,41 @@ workflows:
         target_env: "<< pipeline.parameters.target_env >>"
 
   reset_env_cron:
-    # scheduled job to reset lower envs to a default state
-    # triggers:
-    # - schedule:
-    #     cron: "0 3 * * 0" # 3AM UTC = 11PM EST Sunday night
-    #     filters:
-    #       branches:
-    #         only:
-    #         - tm/env-cron
+    #scheduled job to reset lower envs to a default state
+    triggers:
+    - schedule:
+        cron: "0 3 * * 0" # 3AM UTC = 11PM EST Sunday night
+        filters:
+          branches:
+            only:
+            - main
     jobs:
     - build_and_lint
-    # - deploy_job:
-    #     name: reset (dev-blue)
-    #     target_env: "dev-blue"
-          # requires:
-          # - build_and_lint
-    # - deploy_job:
-    #     name: reset (dev-green)
-    #     target_env: "dev-green"
-          # requires:
-          # - build_and_lint
-    # - deploy_job:
-    #     name: reset (dev-red)
-    #     target_env: "dev-red"
-          # requires:
-          # - build_and_lint
+    - deploy_job:
+        name: reset (dev-blue)
+        target_env: "dev-blue"
+        requires:
+        - build_and_lint
+    - deploy_job:
+        name: reset (dev-green)
+        target_env: "dev-green"
+        requires:
+        - build_and_lint
+    - deploy_job:
+        name: reset (dev-red)
+        target_env: "dev-red"
+        requires:
+        - build_and_lint
     - deploy_job:
         name: reset (dev-pink)
         target_env: "dev-pink"
         requires:
           - build_and_lint
-    # - deploy_job:
-    #     name: reset (dev-gold)
-    #     target_env: "dev-gold"
-    #       requires:
-    #       - build_and_lint
+    - deploy_job:
+        name: reset (dev-gold)
+        target_env: "dev-gold"
+        requires:
+        - build_and_lint
 
   restore_db_cron:
     # scheduled job to ensure lower envs have a recent copy of the database
