--- a/package.json
+++ b/package.json
@@ -128,6 +128,7 @@
     "minimist": "^1.2.7",
     "moment": "^2.29.2",
     "nanoid": "^3.2.0",
+    "nodemailer": "^7.0.11",
     "node-fetch": "^2.6.7",
     "protobufjs": "^7.2.4",
     "got": "^11.8.5",
