--- a/package.json
+++ b/package.json
@@ -128,6 +128,7 @@
     "minimist": "^1.2.7",
     "moment": "^2.29.2",
     "nanoid": "^3.2.0",
+    "nodemailer": "^7.0.11",
     "node-fetch": "^2.6.7",
     "protobufjs": "^7.2.4",
     "got": "^11.8.5",
@@ -310,7 +311,7 @@
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.20.6",
     "esm": "^3.2.25",
-    "ioredis-mock": "^8.9.0",
+    "ioredis-mock": "^8.13.1",
     "istanbul-lib-coverage": "^3.2.2",
     "istanbul-lib-report": "^3.0.1",
     "jest": "29.7.0",
@@ -364,7 +365,7 @@
     "dompurify": "^3.2.4",
     "dot-wild": "^3.0.1",
     "dotenv": "^16.4.1",
-    "email-templates": "^12.0.3",
+    "email-templates": "^13.0.1",
     "express": "^4.22.0",
     "express-http-context": "^1.2.4",
     "express-session": "^1.18.2",
