--- a/frontend/package.json
+++ b/frontend/package.json
@@ -102,6 +102,7 @@
     "nanoid": "^3.2.0",
     "node-fetch": "^2.6.7",
     "nth-check": "^2.0.1",
+    "on-headers": "1.1.0",
     "path-to-regexp": "^1.9.0",
     "postcss": "^8.4.31",
     "semver": "^7.5.3",
