--- a/package.json
+++ b/package.json
@@ -151,6 +151,7 @@
     "fast-xml-parser": "^4.4.1",
     "ws": "^8.17.1",
     "tar-fs": "^2.1.3",
+    "tar": "^7.5.4",
     "jest": "29.7.0",
     "babel-jest": "29.7.0",
     "form-data": "^4.0.0"
