--- a/docs/openapi/index.yaml
+++ b/docs/openapi/index.yaml
@@ -436,6 +436,13 @@ components:
           items:
             type: string
           nullable: true
+        goalTemplates:
+          type: array
+          items:
+            type: object
+            properties:
+              standard:
+                type: string
     sessionReportsResponse:
       type: object
       description: Response object for get session reports endpoint
