--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,23 @@
 .dockerignore
 node_modules
 docker-compose.yaml
+.yarn
+.git
+.github
+.gitmodules
+.DS_Store
+.env
+.env.*
+.vscode
+.idea
+*.log
+npm-debug.log*
+yarn-error.log*
+coverage
+reports
+build
+frontend/build
+.cache
+tmp
+temp
+storage
