--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,4 @@
 # Copy this file to `.env`
-CURRENT_USER=1000:1000
 LOG_JSON_FORMAT=false
 LOG_LEVEL=info
 POSTGRES_USERNAME=postgres
@@ -19,6 +18,7 @@ AUTH_BASE=https://staging.hses.ohs.acf.hhs.gov/oidc
 # AUTH_BASE=https://idp.int.identitysandbox.gov
 # This env variable should go away soon in favor of TTA_SMART_HUB_URI
 REDIRECT_URI_HOST=http://localhost:8080
+BACKEND_PROXY=http://localhost:8080
 # CURRENT_USER_ID controls the logged in user when BYPASS_AUTH is set to true.
 # This only works in non-production environments
 CURRENT_USER_ID=1
