--- a/package.json
+++ b/package.json
@@ -8,109 +8,89 @@
   },
   "scripts": {
     "build": "tsc -p src",
-    "deps": "yarn global add node-gyp && yarn install --frozen-lockfile && yarn --cwd frontend install --frozen-lockfile",
-    "deps:local": "yarn global add node-gyp && yarn install && yarn --cwd frontend install",
-    "deps:update-lockfile": "yarn install --mode update-lockfile && cd frontend && yarn install --mode update-lockfile",
-    "deps:audit": "./tools/run-yarn-audit.js && cd frontend && ../tools/run-yarn-audit.js",
-    "start:local": "concurrently \"yarn server\" \"yarn client\" \"yarn worker\"",
-    "start:ci": "cross-env BYPASS_SOCKETS=true POSTGRES_USERNAME=postgres POSTGRES_DB=ttasmarthub TTA_SMART_HUB_URI=http://localhost:3000 'concurrently \"yarn start:web\" \"yarn client\" \"yarn start:testingonly\"'",
-    "start:web": "node ./build/server/src/index.js",
-    "start:worker": "node ./build/server/src/worker.js",
-    "start:testingonly": "node ./build/server/src/testingOnly.js",
-    "server": "tsx watch src/index.ts",
-    "worker": "tsx watch src/worker.ts",
-    "server:debug": "nodemon --inspect=0.0.0.0:9229 src/index.js --exec babel-node",
-    "client": "yarn --cwd frontend start",
-    "test": "yarn build && jest build/server/src --runInBand",
-    "test:ci": "./bin/test-backend-ci",
-    "test:all": "yarn test:ci && yarn --cwd frontend test:ci",
-    "test:e2e:ui": "npx playwright test --ui tests/e2e",
-    "lint": "eslint src",
-    "lint:ci": "eslint -f eslint-formatter-multiple src",
-    "lint:all": "yarn lint:ci && yarn --cwd frontend lint:ci",
-    "lint:fix": "eslint --fix src",
-    "lint:fix:single": "eslint --fix",
-    "lint:fix:all": "yarn lint:fix && yarn --cwd frontend lint:fix",
+    "changeReportStatus": "node ./build/server/src/tools/changeReportStatusCLI.js",
+    "changeReportStatus:local": "./node_modules/.bin/babel-node ./src/tools/changeReportStatusCLI.js",
+    "check-coverage": "node ./src/tools/check-coverage.js --fail-on-uncovered=true",
     "clean": "rm -rf coverage reports frontend/coverage frontend/reports frontend/build",
-    "docs:serve": "npx @redocly/cli preview-docs -p 5003 docs/openapi/index.yaml",
+    "client": "yarn --cwd frontend start",
+    "coverage:backend": "./bin/build-coverage-report",
+    "create:goals": "node ./build/server/src/tools/goalPilotCLI.js",
+    "create:goals:local": "./node_modules/.bin/babel-node ./src/tools/goalPilotCLI.js",
+    "createMonitoringGoalsCLI": "node ./build/server/src/tools/createMonitoringGoalsCLI.js",
+    "createMonitoringGoalsCLI:local": "tsx ./src/tools/createMonitoringGoalsCLI.js",
     "cucumber": "./node_modules/.bin/cucumber-js --publish ./cucumber/features/*.feature -f json:./reports/cucumber_report.json && node ./cucumber/index.js",
     "cucumber:ci": "cross-env TTA_SMART_HUB_URI=http://localhost:3000 yarn cucumber",
-    "e2e": "./node_modules/.bin/playwright test --config=tests/e2e/playwright.config.js",
-    "e2e:api": "./node_modules/.bin/playwright test --config=tests/api/playwright.config.js",
-    "e2e:utils": "./node_modules/.bin/playwright test --config=tests/utilsTests/playwright.config.js",
-    "e2e:ci": "cross-env TTA_SMART_HUB_URI=http://localhost:3000 yarn e2e",
-    "migrate:create": "npx sequelize-cli migration:generate --name",
-    "db:bootstrap:admin:local": "./node_modules/.bin/babel-node ./src/tools/bootstrapAdminCLI.js",
     "db:bootstrap:admin": "node ./build/server/src/tools/bootstrapAdminCLI.js",
-    "db:validation": "node ./build/server/src/tools/dataValidationCLI.js",
+    "db:bootstrap:admin:local": "./node_modules/.bin/babel-node ./src/tools/bootstrapAdminCLI.js",
     "db:migrate": "node_modules/.bin/sequelize db:migrate && yarn ldm",
-    "db:migrate:create": "npx sequelize-cli migration:generate --name",
     "db:migrate:ci": "cross-env POSTGRES_USERNAME=postgres POSTGRES_DB=ttasmarthub node_modules/.bin/sequelize db:migrate  && yarn ldm:ci",
+    "db:migrate:create": "npx sequelize-cli migration:generate --name",
     "db:migrate:prod": "node_modules/.bin/sequelize db:migrate --options-path .production.sequelizerc",
     "db:migrate:undo": "node_modules/.bin/sequelize db:migrate:undo  && yarn ldm",
-    "db:migrate:undo:prod:last": "node_modules/.bin/sequelize db:migrate:undo --options-path .production.sequelizerc",
     "db:migrate:undo:prod:all": "node_modules/.bin/sequelize db:migrate:undo:all --options-path .production.sequelizerc",
+    "db:migrate:undo:prod:last": "node_modules/.bin/sequelize db:migrate:undo --options-path .production.sequelizerc",
     "db:seed": "node_modules/.bin/sequelize db:seed:all",
     "db:seed:ci": "cross-env POSTGRES_USERNAME=postgres POSTGRES_DB=ttasmarthub node_modules/.bin/sequelize db:seed:all",
     "db:seed:prod": "node_modules/.bin/sequelize db:seed:all --options-path .production.sequelizerc",
     "db:seed:undo": "node_modules/.bin/sequelize db:seed:undo:all",
     "db:seed:undo:prod": "node_modules/.bin/sequelize db:seed:undo:all --options-path .production.sequelizerc",
-    "docker:clear": "docker images | grep head-start | awk '{print $3}' | while read x; do docker image rm -f $x; done",
-    "docker:deps": "docker compose --profile minimal_required_postgres --profile minimal_required_redis run --rm backend yarn install && docker compose --profile minimal_required_postgres --profile minimal_required_redis run --rm frontend yarn install && docker compose --profile minimal_required_postgres --profile minimal_required_redis run --rm worker yarn install",
-    "docker:reset": "./bin/reset-all",
-    "docker:start": "docker compose --profile minimal_required_node --profile minimal_required_postgres --profile minimal_required_redis --profile minimal_required_python up --build",
-    "docker:start:native": "docker compose --profile full_stack --profile minimal_required_postgres --profile minimal_required_redis --profile minimal_required_python up & sleep 1 && docker compose -f docker-compose.yml stop db",
-    "docker:start:full": "docker compose --profile full_stack --profile full_stack_zap  --profile minimal_required_node --profile minimal_required_postgres --profile minimal_required_redis --profile minimal_required_python up",
-    "docker:start:debug": "docker compose --compatibility -f docker-compose.yml -f docker-compose.debug.yml up",
-    "docker:stop": "docker compose --profile full_stack --profile full_stack_zap --profile minimal_required_node --profile minimal_required_postgres --profile minimal_required_redis --profile minimal_required_python down",
-    "docker:dbs:start": "docker compose -f 'docker-compose.yml' --profile full_stack --profile minimal_required_redis --profile minimal_required_python up",
-    "docker:dbs:stop": "yarn docker:stop",
-    "docker:test": "./bin/run-tests",
-    "docker:test:be": "yarn docker:yarn:be test",
-    "docker:lint": "yarn docker:yarn:be lint:ci && yarn docker:yarn:fe lint:ci",
-    "docker:lint:fix": "yarn docker:yarn:be lint:fix && yarn docker:yarn:fe lint:fix",
-    "docker:shell:frontend": "docker compose run --rm frontend /bin/bash",
-    "docker:shell:backend": "yarn docker:yarn:be /bin/bash",
-    "docker:db:migrate": "yarn docker:yarn:be db:migrate && yarn docker:ldm",
-    "docker:db:migrate:undo": "yarn docker:yarn:be db:migrate:undo",
-    "docker:db:seed": "yarn docker:yarn:be db:seed",
-    "docker:db:seed:undo": "yarn docker:yarn:be db:seed:undo",
-    "docker:import:system": "yarn docker:yarn:be import:system",
-    "docker:ldm": "yarn docker:yarn:be ldm",
-    "docker:makecolors": "yarn docker:yarn:fe makecolors",
-    "docker:yarn": "docker compose run yarn",
-    "docker:yarn:fe": "docker compose run --rm frontend yarn",
-    "docker:yarn:be": "docker compose --profile minimal_required_postgres --profile minimal_required_redis run -T --rm backend yarn",
-    "import:reports:local": "./node_modules/.bin/babel-node ./src/tools/importSSActivityReports.js",
-    "import:reports": "node ./build/server/src/tools/importSSActivityReports.js",
-    "import:goals:local": "./node_modules/.bin/babel-node ./src/tools/importTTAPlanGoals.js",
-    "create:goals": "node ./build/server/src/tools/goalPilotCLI.js",
-    "create:goals:local": "./node_modules/.bin/babel-node ./src/tools/goalPilotCLI.js",
-    "import:goals": "node ./build/server/src/tools/importTTAPlanGoals.js",
-    "import:hses:local": "./node_modules/.bin/babel-node ./src/tools/importGrantRecipientsCLI.js --skipdownload",
-    "import:hses": "node ./build/server/src/tools/importGrantRecipientsCLI.js",
-    "import:system": "cross-env POSTGRES_USERNAME=postgres POSTGRES_DB=ttasmarthub tsx src/tools/importSystemCLI.ts",
-    "reconcile:legacy": "node ./build/server/src/tools/reconcileLegacyReports.js",
-    "reconcile:legacy:local": "./node_modules/.bin/babel-node ./src/tools/reconcileLegacyReports.js",
-    "processData:local": "yarn build && node ./build/server/src/tools/processDataCLI.js",
-    "ldm:ci": "cross-env POSTGRES_USERNAME=postgres POSTGRES_DB=ttasmarthub tsx ./src/tools/logicalDataModelCLI.ts",
-    "ldm": "tsx ./src/tools/logicalDataModelCLI.ts",
-    "changeReportStatus": "node ./build/server/src/tools/changeReportStatusCLI.js",
-    "changeReportStatus:local": "./node_modules/.bin/babel-node ./src/tools/changeReportStatusCLI.js",
-    "makecolors": "node ./src/makecolors.js",
-    "restoreTopics": "node ./build/server/src/tools/restoreTopicsCLI.js",
-    "restoreTopics:local": "./node_modules/.bin/babel-node ./src/tools/restoreTopicsCLI.js",
-    "coverage:backend": "./bin/build-coverage-report",
+    "db:validation": "node ./build/server/src/tools/dataValidationCLI.js",
+    "deps": "yarn global add node-gyp && yarn install --frozen-lockfile && yarn --cwd frontend install --frozen-lockfile",
+    "deps:audit": "./tools/run-yarn-audit.js && cd frontend && ../tools/run-yarn-audit.js",
+    "deps:local": "yarn global add node-gyp && yarn install && yarn --cwd frontend install",
+    "deps:update-lockfile": "yarn install --mode update-lockfile && cd frontend && yarn install --mode update-lockfile",
     "docker:coverage:backend": "docker compose --profile minimal_required_postgres --profile minimal_required_redis run --rm backend chmod 744 ./bin/build-coverage-report && ./bin/build-coverage-report",
+    "docker:start": "docker compose --profile dev up",
+    "docker:restart": "docker compose down -v --rmi local --remove-orphans && docker compose --profile dev up --build",
+    "docker:stop": "docker compose down --remove-orphans",
+    "docker:test": "docker compose --profile test up tests --build --exit-code-from tests --remove-orphans",
+    "docker:full": "docker compose --profile full up --remove-orphans",
+    "docker:seed": "docker compose run --rm -e RUN_DB_SETUP=true -e RUN_DB_SEED=true db-init true",
+    "docs:serve": "npx @redocly/cli preview-docs -p 5003 docs/openapi/index.yaml",
+    "e2e": "./node_modules/.bin/playwright test --config=tests/e2e/playwright.config.js",
+    "e2e:api": "./node_modules/.bin/playwright test --config=tests/api/playwright.config.js",
+    "e2e:ci": "cross-env TTA_SMART_HUB_URI=http://localhost:3000 yarn e2e",
+    "e2e:utils": "./node_modules/.bin/playwright test --config=tests/utilsTests/playwright.config.js",
+    "import:goals": "node ./build/server/src/tools/importTTAPlanGoals.js",
+    "import:goals:local": "./node_modules/.bin/babel-node ./src/tools/importTTAPlanGoals.js",
+    "import:hses": "node ./build/server/src/tools/importGrantRecipientsCLI.js",
+    "import:hses:local": "./node_modules/.bin/babel-node ./src/tools/importGrantRecipientsCLI.js --skipdownload",
+    "import:reports": "node ./build/server/src/tools/importSSActivityReports.js",
+    "import:reports:local": "./node_modules/.bin/babel-node ./src/tools/importSSActivityReports.js",
+    "import:system": "cross-env POSTGRES_USERNAME=postgres POSTGRES_DB=ttasmarthub tsx src/tools/importSystemCLI.ts",
+    "ldm": "tsx ./src/tools/logicalDataModelCLI.ts",
+    "ldm:ci": "cross-env POSTGRES_USERNAME=postgres POSTGRES_DB=ttasmarthub tsx ./src/tools/logicalDataModelCLI.ts",
+    "lint": "eslint src",
+    "lint:all": "yarn lint:ci && yarn --cwd frontend lint:ci",
+    "lint:ci": "eslint -f eslint-formatter-multiple src",
+    "lint:fix": "eslint --fix src",
+    "lint:fix:all": "yarn lint:fix && yarn --cwd frontend lint:fix",
+    "lint:fix:single": "eslint --fix",
+    "makecolors": "node ./src/makecolors.js",
+    "merge-coverage": "node ./src/tools/merge-coverage.js",
+    "migrate:create": "npx sequelize-cli migration:generate --name",
     "populateLegacyResourceTitles": "node ./build/server/src/tools/populateLegacyResourceTitlesCli.js",
     "populateLegacyResourceTitles:local": "./node_modules/.bin/babel-node ./src/tools/populateLegacyResourceTitlesCli.js",
+    "processData:local": "yarn build && node ./build/server/src/tools/processDataCLI.js",
+    "publish:common": "yarn --cwd ./packages/common publish",
+    "reconcile:legacy": "node ./build/server/src/tools/reconcileLegacyReports.js",
+    "reconcile:legacy:local": "./node_modules/.bin/babel-node ./src/tools/reconcileLegacyReports.js",
+    "restoreTopics": "node ./build/server/src/tools/restoreTopicsCLI.js",
+    "restoreTopics:local": "./node_modules/.bin/babel-node ./src/tools/restoreTopicsCLI.js",
+    "server": "tsx watch src/index.ts",
+    "server:debug": "nodemon --inspect=0.0.0.0:9229 src/index.js --exec babel-node",
+    "start:ci": "cross-env BYPASS_SOCKETS=true POSTGRES_USERNAME=postgres POSTGRES_DB=ttasmarthub TTA_SMART_HUB_URI=http://localhost:3000 'concurrently \"yarn start:web\" \"yarn client\" \"yarn start:testingonly\"'",
+    "start:local": "concurrently \"yarn server\" \"yarn client\" \"yarn worker\"",
+    "start:testingonly": "node ./build/server/src/testingOnly.js",
+    "start:web": "node ./build/server/src/index.js",
+    "start:worker": "node ./build/server/src/worker.js",
+    "test": "yarn build && jest build/server/src --runInBand",
+    "test:all": "yarn test:ci && yarn --cwd frontend test:ci",
+    "test:ci": "./bin/test-backend-ci",
+    "test:e2e:ui": "npx playwright test --ui tests/e2e",
     "updateCompletedEventReportPilots": "node ./build/server/src/tools/updateCompletedEventReportPilotsCLI.js",
     "updateCompletedEventReportPilots:local": "./node_modules/.bin/babel-node ./src/tools/updateCompletedEventReportPilotsCLI.js",
-    "publish:common": "yarn --cwd ./packages/common publish",
-    "merge-coverage": "node ./src/tools/merge-coverage.js",
-    "check-coverage": "node ./src/tools/check-coverage.js --fail-on-uncovered=true",
-    "createMonitoringGoalsCLI": "node ./build/server/src/tools/createMonitoringGoalsCLI.js",
-    "createMonitoringGoalsCLI:local": "tsx ./src/tools/createMonitoringGoalsCLI.js"
+    "worker": "tsx watch src/worker.ts"
   },
   "repository": {
     "type": "git",
