--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -382,6 +382,7 @@ jobs:
           report_dir="coverage-report"
           mkdir -p ${temp_dir}
 
+          node ./tools/merge-coverage.js
           find . -name "coverage-final.json" -print0 | while IFS= read -r -d $'\0' file; do
             relative_path="${file#./}"
             new_name="${relative_path//\//-}"
