--- a/package.json
+++ b/package.json
@@ -129,7 +129,6 @@
     "marked": "^4.0.10",
     "minimist": "^1.2.7",
     "moment": "^2.29.2",
-    "nanoid": "^3.2.0",
     "nodemailer": "^7.0.11",
     "node-fetch": "^2.6.7",
     "protobufjs": "^7.2.4",
@@ -352,7 +351,7 @@
     "aws-sdk-client-mock": "^4.1.0",
     "aws4": "^1.11.0",
     "axios": "^1.12.0",
-    "bull": "^4.2.0",
+    "bull": "^4.16.5",
     "chardet": "^2.0.0",
     "cheerio": "^1.1.2",
     "client-oauth2": "^4.3.3",
@@ -392,6 +391,7 @@
     "multiparty": "^4.2.2",
     "mz": "^2.7.0",
     "newrelic": "^13.6.4",
+    "nanoid": "5.1.6",
     "nodemailer": "^7.0.11",
     "openid-client": "^6.6.4",
     "opentelemetry": "^0.1.0",
