--- a/package.json
+++ b/package.json
@@ -129,6 +129,7 @@
     "marked": "^4.0.10",
     "minimist": "^1.2.7",
     "moment": "^2.29.2",
+    "nanoid": "^3.2.0",
     "nodemailer": "^7.0.11",
     "node-fetch": "^2.6.7",
     "protobufjs": "^7.2.4",
@@ -391,7 +392,6 @@
     "multiparty": "^4.2.2",
     "mz": "^2.7.0",
     "newrelic": "^13.6.4",
-    "nanoid": "5.1.6",
     "nodemailer": "^7.0.11",
     "openid-client": "^6.6.4",
     "opentelemetry": "^0.1.0",
