--- a/package.json
+++ b/package.json
@@ -28,6 +28,10 @@
     "lint": "eslint src",
     "lint:ci": "eslint -f eslint-formatter-multiple src",
     "lint:all": "yarn lint:ci && yarn --cwd frontend lint:ci",
+    "lint:biome": "biome lint src",
+    "lint:biome:ci": "biome lint --reporter json src",
+    "lint:biome:all": "yarn lint:biome:ci && yarn --cwd frontend lint:biome:ci",
+    "lint:biome:fix": "biome lint --write src",
     "lint:fix": "eslint --fix src",
     "lint:fix:single": "eslint --fix",
     "lint:fix:all": "yarn lint:fix && yarn --cwd frontend lint:fix",
@@ -292,6 +296,7 @@
     "@babel/plugin-transform-runtime": "^7.11.0",
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-typescript": "^7.18.6",
+    "@biomejs/biome": "^2.3.14",
     "@cucumber/cucumber": "^12.2.0",
     "@hapi/joi": "^17.1.1",
     "@playwright/test": "^1.56.1",
