--- a/frontend/package.json
+++ b/frontend/package.json
@@ -70,19 +70,15 @@
   },
   "scripts": {
     "start": "cross-env DISABLE_ESLINT_PLUGIN=true craco start --verbose",
-    "build:local": "INLINE_RUNTIME_CHUNK=false craco build",
-    "build": "INLINE_RUNTIME_CHUNK=false FAST_REFRESH=false craco build && mv build/ ../build/server/client",
+    "build:local": "cross-env DISABLE_ESLINT_PLUGIN=true INLINE_RUNTIME_CHUNK=false craco build",
+    "build": "cross-env DISABLE_ESLINT_PLUGIN=true INLINE_RUNTIME_CHUNK=false FAST_REFRESH=false craco build && mv build/ ../build/server/client",
     "eject": "craco eject",
     "test": "cross-env TZ=America/New_York craco test",
     "test:ci": "cross-env TZ=America/New_York JEST_JUNIT_OUTPUT_DIR=reports JEST_JUNIT_OUTPUT_NAME=unit.xml CI=true node --expose-gc ./node_modules/.bin/craco test --coverage --silent --reporters=default --detectOpenHandles --forceExit --reporters=jest-junit --logHeapUsage",
-    "lint": "eslint src",
-    "lint:biome": "biome lint src",
-    "lint:biome:ci": "biome lint --reporter json src",
-    "lint:biome:fix": "biome lint --write src",
-    "lint:biome:fix:single": "biome check --write --no-errors-on-unmatched",
-    "lint:fix": "eslint --fix src",
-    "lint:fix:single": "eslint --fix",
-    "lint:ci": "eslint -f eslint-formatter-multiple src"
+    "lint": "biome lint src",
+    "lint:fix": "biome check --write src",
+    "lint:fix:single": "biome check --write --no-errors-on-unmatched",
+    "lint:ci": "mkdir -p reports && biome lint --reporter junit src > reports/lint.xml"
   },
   "resolutions": {
     "ansi-regex": "^5.0.1",
@@ -118,55 +114,6 @@
     "webpack": "^5.76.1",
     "yaml": "^2.2.2"
   },
-  "eslintConfig": {
-    "root": true,
-    "parserOptions": {
-      "ecmaVersion": "latest"
-    },
-    "plugins": [
-      "testing-library"
-    ],
-    "extends": [
-      "airbnb",
-      "plugin:jest/recommended",
-      "plugin:testing-library/react",
-      "plugin:react-hooks/recommended"
-    ],
-    "ignorePatterns": [
-      "build/*",
-      "node_modules/*",
-      "public/*"
-    ],
-    "rules": {
-      "react/jsx-filename-extension": [
-        1,
-        {
-          "extensions": [
-            ".js",
-            ".jsx"
-          ]
-        }
-      ],
-      "linebreak-style": 0
-    },
-    "env": {
-      "jest/globals": true,
-      "browser": true
-    }
-  },
-  "eslint-formatter-multiple": {
-    "formatters": [
-      {
-        "name": "stylish",
-        "output": "console"
-      },
-      {
-        "name": "junit",
-        "output": "file",
-        "path": "reports/lint.xml"
-      }
-    ]
-  },
   "babel": {
     "presets": [
       "@babel/preset-react"
@@ -194,15 +141,6 @@
     "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/user-event": "^13.5.0",
     "cross-env": "^7.0.2",
-    "eslint": "^7.20.0",
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-formatter-multiple": "^1.0.0",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-jest": "^24.1.5",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-react": "^7.20.5",
-    "eslint-plugin-react-hooks": "^4.0.8",
-    "eslint-plugin-testing-library": "^3.10.1",
     "fetch-mock": "^9.11.0",
     "history": "4.10.1",
     "jest-fetch-mock": "^3.0.3",
