--- a/package.json
+++ b/package.json
@@ -111,7 +111,9 @@
     "check-coverage": "node ./src/tools/check-coverage.js --fail-on-uncovered=true",
     "createMonitoringGoalsCLI": "node ./build/server/src/tools/createMonitoringGoalsCLI.js",
     "createMonitoringGoalsCLI:local": "tsx ./src/tools/createMonitoringGoalsCLI.js",
-    "cli:dbMaintenance": "node ./build/server/src/tools/dbMaintenanceCLI.js"
+    "cli:dbMaintenance": "node ./build/server/src/tools/dbMaintenanceCLI.js",
+    "cli:queue-exercise:live": "node ./build/server/src/tools/queueExerciseLiveCLI.js",
+    "cli:queue-exercise:live:local": "tsx ./src/tools/queueExerciseLiveCLI.ts"
   },
   "repository": {
     "type": "git",
