--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "test:all": "yarn test:ci && yarn --cwd frontend test:ci",
     "test:e2e:ui": "npx playwright test --ui tests/e2e",
     "lint": "biome lint src",
-    "lint:ci": "mkdir -p reports && biome lint --reporter junit src > reports/lint.xml",
+    "lint:ci": "mkdir -p reports; biome lint src; LINT_EXIT=$?; biome lint --reporter junit src > reports/lint.xml; JUNIT_EXIT=$?; [ $LINT_EXIT -eq 0 ] && [ $JUNIT_EXIT -eq 0 ]",
     "lint:all": "yarn lint:ci && yarn --cwd frontend lint:ci",
     "lint:fix": "biome check --write src",
     "lint:fix:single": "biome check --write --no-errors-on-unmatched",
